<resources>
    <string name="app_name">Check Box Demo</string>
    <string name="title_text"> What do You Want to Buy ? </string>
    <string name="bottom_text">Please collect your Order</string>
    <string name="milk_text"> Milk </string>
    <string name="sugar_text"> Sugar </string>
    <string name="water_text"> Water </string>
    <string name="salt_text"> Salt </string>
    <string name="rice_text"> Rice </string>
    <string name="tea_text"> Tea </string>
    <string name="oil_text"> Oil </string>
    <string name="fruits_text"> Fruits </string>
    <string name="button_text"> Show </string>
</resources>